# Lyrics-classifier-and-generator

./: .dic  .env.example  .gitignore  README.md  const.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  security.py
backend/: .env.example  README.md  config.py  docker-compose.yaml  main.py  requirements.txt
backend/base/: enums.py
backend/exceptions/: __init__.py
backend/middleware/: auth.py  context.py  headers.py
backend/persistence/database/: __init__.py  account.py  util.py
backend/persistence/s3/: __init__.py
backend/processor/http/: public.py  util.py
backend/service/: __init__.py  lyrics_classifier.py  lyrics_generator.py
base/: do.py  enums.py  mcs.py
frontend/: index.html  package.json
frontend/src/: App.jsx  agent.js  main.jsx
frontend/src/constants/: GENRE_NAMES.js
frontend/src/hooks/: useClassifier.js  useGenerator.js
middleware/: context.py  envelope.py
persistence/amqp_consumer/: __init__.py
persistence/amqp_publisher/: __init__.py
persistence/database/: s3_file.py
processor/amqp/: __init__.py
processor/http/: __init__.py  account.py  public.py
service/: __init__.py  lyrics_classifier.py  lyrics_generator.py
